# sqlite-component

./: Cargo.toml  README.md  build.sh
host/: Cargo.toml  README.md
host/src/: main.rs
src/: bindings.rs  lib.rs
wit/: world.wit
