[package]
name = "sqlite-component"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.25.0", features = ["bitflags"] }
rusqlite = { version = "0.31.0", features = ["bundled", "wasm32-wasi-vfs"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:sqlite-component"

[package.metadata.component.dependencies]
